--- a/dev/_modules/nglview/utils/js_utils.html
+++ b/dev/_modules/nglview/utils/js_utils.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>nglview.utils.js_utils &#8212; NGLView 0.6.2.3 documentation</title>
+    <title>nglview.utils.js_utils &#8212; NGLView 0.6.2.3+8.gd5331cc documentation</title>
     
     <link rel="stylesheet" href="../../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../../',
-        VERSION:     '0.6.2.3',
+        VERSION:     '0.6.2.3+8.gd5331cc',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -38,7 +38,7 @@
         <li class="right" >
           <a href="../../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 0.6.2.3 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 0.6.2.3+8.gd5331cc documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../../index.html" accesskey="U">Module code</a> &#187;</li> 
       </ul>
     </div>  
@@ -52,27 +52,32 @@
 <span></span><span class="kn">from</span> <span class="nn">functools</span> <span class="k">import</span> <span class="n">partial</span>
 <span class="kn">from</span> <span class="nn">IPython.display</span> <span class="k">import</span> <span class="n">display</span><span class="p">,</span> <span class="n">Javascript</span><span class="p">,</span> <span class="n">HTML</span>
 
-<span class="n">__alll__</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;clean_error_output&#39;</span><span class="p">,</span> <span class="s1">&#39;launch_qtconsole&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;clean_empty_output_area&#39;</span><span class="p">,</span> <span class="s1">&#39;open_url_template&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;_set_ipython_cell&#39;</span><span class="p">,</span> <span class="s1">&#39;ngl_demo&#39;</span><span class="p">,</span> <span class="s1">&#39;init_funcs&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;_move_notebook_to_the_right&#39;</span><span class="p">,</span> <span class="s1">&#39;_move_notebook_to_the_left&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;_reset_notebook&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;_set_notebook_draggable&#39;</span><span class="p">]</span>
+<span class="n">__alll__</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="s1">&#39;clean_error_output&#39;</span><span class="p">,</span> <span class="s1">&#39;launch_qtconsole&#39;</span><span class="p">,</span> <span class="s1">&#39;clean_empty_output_area&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;open_url_template&#39;</span><span class="p">,</span> <span class="s1">&#39;_set_ipython_cell&#39;</span><span class="p">,</span> <span class="s1">&#39;ngl_demo&#39;</span><span class="p">,</span> <span class="s1">&#39;init_funcs&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;_move_notebook_to_the_right&#39;</span><span class="p">,</span> <span class="s1">&#39;_move_notebook_to_the_left&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;_reset_notebook&#39;</span><span class="p">,</span> <span class="s1">&#39;_set_notebook_draggable&#39;</span>
+<span class="p">]</span>
+
 
 <div class="viewcode-block" id="run"><a class="viewcode-back" href="../../../_api/nglview.jsutils.html#nglview.utils.js_utils.run">[docs]</a><span class="k">def</span> <span class="nf">run</span><span class="p">(</span><span class="n">command</span><span class="p">):</span>
     <span class="n">display</span><span class="p">(</span><span class="n">Javascript</span><span class="p">(</span><span class="n">command</span><span class="p">))</span></div>
+
 
 <span class="c1"># cell.clear_output()</span>
 <div class="viewcode-block" id="hide_toolbar"><a class="viewcode-back" href="../../../_api/nglview.jsutils.html#nglview.utils.js_utils.hide_toolbar">[docs]</a><span class="k">def</span> <span class="nf">hide_toolbar</span><span class="p">():</span>
     <span class="n">run</span><span class="p">(</span><span class="s2">&quot;$(&#39;#maintoolbar&#39;).hide()&quot;</span><span class="p">)</span>
     <span class="n">run</span><span class="p">(</span><span class="s2">&quot;$(&#39;#header-container&#39;).hide()&quot;</span><span class="p">)</span></div>
 
+
 <div class="viewcode-block" id="show_toolbar"><a class="viewcode-back" href="../../../_api/nglview.jsutils.html#nglview.utils.js_utils.show_toolbar">[docs]</a><span class="k">def</span> <span class="nf">show_toolbar</span><span class="p">():</span>
     <span class="n">run</span><span class="p">(</span><span class="s2">&quot;$(&#39;#maintoolbar&#39;).show()&quot;</span><span class="p">)</span>
     <span class="n">run</span><span class="p">(</span><span class="s2">&quot;$(&#39;#header-container&#39;).show()&quot;</span><span class="p">)</span></div>
 
+
 <div class="viewcode-block" id="execute"><a class="viewcode-back" href="../../../_api/nglview.jsutils.html#nglview.utils.js_utils.execute">[docs]</a><span class="k">def</span> <span class="nf">execute</span><span class="p">(</span><span class="n">command</span><span class="p">):</span>
     <span class="n">run</span><span class="p">(</span><span class="s1">&#39;Jupyter.notebook.kernel.execute(&quot;</span><span class="si">{}</span><span class="s1">&quot;)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">command</span><span class="p">))</span></div>
+
 
 <span class="k">def</span> <span class="nf">_set_notebook_width</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;20%&#39;</span><span class="p">,</span> <span class="n">left_padding</span><span class="o">=</span><span class="mi">0</span><span class="p">):</span>
     <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
@@ -89,6 +94,7 @@
     <span class="n">command</span> <span class="o">=</span> <span class="n">script_template</span> <span class="o">+</span> <span class="n">offset_str</span>
     <span class="n">run</span><span class="p">(</span><span class="n">command</span><span class="p">)</span>
 
+
 <span class="k">def</span> <span class="nf">_set_notebook_draggable</span><span class="p">(</span><span class="n">yes</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>
     <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
 <span class="s2">    var x = $(&#39;#notebook-container&#39;);</span>
@@ -99,12 +105,14 @@
     <span class="k">else</span><span class="p">:</span>
         <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;</span><span class="si">{args}</span><span class="s1">&#39;</span><span class="p">,</span> <span class="s1">&#39;&quot;destroy&quot;&#39;</span><span class="p">))</span>
 
+
 <span class="k">def</span> <span class="nf">_move_notebook_to_the_right</span><span class="p">():</span>
     <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
 <span class="s2">    var x = $(&#39;#notebook-container&#39;);</span>
 <span class="s2">    x.css({position: &quot;relative&quot;, left: &quot;20%&quot;});</span>
 <span class="s2">    &quot;&quot;&quot;</span>
     <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="p">)</span>
+
 
 <span class="k">def</span> <span class="nf">_move_notebook_to_the_left</span><span class="p">():</span>
     <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
@@ -113,6 +121,7 @@
 <span class="s2">    cb.offset({&#39;left&#39;: 0})</span>
 <span class="s2">    &quot;&quot;&quot;</span>
     <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="p">)</span>
+
 
 <span class="k">def</span> <span class="nf">_reset_notebook</span><span class="p">():</span>
     <span class="n">script_template</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
@@ -123,7 +132,9 @@
     <span class="n">run</span><span class="p">(</span><span class="n">script_template</span><span class="p">)</span>
 
 
-<span class="n">clean_empty_output_area</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span><span class="n">run</span><span class="p">,</span> <span class="n">command</span><span class="o">=</span><span class="s2">&quot;&quot;&quot;</span>
+<span class="n">clean_empty_output_area</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span>
+    <span class="n">run</span><span class="p">,</span>
+    <span class="n">command</span><span class="o">=</span><span class="s2">&quot;&quot;&quot;</span>
 <span class="s2">var output_area = $(&quot;.output_area&quot;);</span>
 
 <span class="s2">for (var i=0; i &lt; output_area.length; i++){</span>
@@ -133,7 +144,8 @@
 <span class="s2">}</span>
 <span class="s2">&quot;&quot;&quot;</span><span class="p">)</span>
 
-<span class="n">launch_qtconsole</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span><span class="n">run</span><span class="p">,</span> <span class="n">command</span><span class="o">=</span><span class="s2">&quot;&quot;&quot;</span>
+<span class="n">launch_qtconsole</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span>
+    <span class="n">run</span><span class="p">,</span> <span class="n">command</span><span class="o">=</span><span class="s2">&quot;&quot;&quot;</span>
 <span class="s2">Jupyter.notebook.kernel.execute(&#39;%qtconsole&#39;)</span>
 <span class="s2">&quot;&quot;&quot;</span><span class="p">)</span>
 
@@ -141,7 +153,9 @@
 <span class="s2">window.open(</span><span class="si">{url}</span><span class="s2">);</span>
 <span class="s2">&quot;&quot;&quot;</span>
 
-<span class="n">clean_error_output</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span><span class="n">run</span><span class="p">,</span> <span class="n">command</span><span class="o">=</span><span class="s2">&quot;&quot;&quot;</span>
+<span class="n">clean_error_output</span> <span class="o">=</span> <span class="n">partial</span><span class="p">(</span>
+    <span class="n">run</span><span class="p">,</span>
+    <span class="n">command</span><span class="o">=</span><span class="s2">&quot;&quot;&quot;</span>
 <span class="s2">var cells = Jupyter.notebook.get_cells();</span>
 
 <span class="s2">for (var i = 0; i &lt; cells.length; i++){</span>
@@ -154,6 +168,7 @@
 <span class="s2">    }</span>
 <span class="s2">}</span>
 <span class="s2">&quot;&quot;&quot;</span><span class="p">)</span>
+
 
 <span class="k">def</span> <span class="nf">_set_ipython_cell</span><span class="p">(</span><span class="n">background</span><span class="o">=</span><span class="s1">&#39;#67a9cf&#39;</span><span class="p">):</span>
     <span class="n">cm</span> <span class="o">=</span> <span class="s2">&quot;&quot;&quot;</span>
@@ -192,6 +207,7 @@
     <span class="n">run</span><span class="p">(</span><span class="n">cm</span><span class="p">)</span>
     <span class="n">run</span><span class="p">(</span><span class="n">cm2</span><span class="p">)</span>
 
+
 <div class="viewcode-block" id="ngl_demo"><a class="viewcode-back" href="../../../_api/nglview.jsutils.html#nglview.utils.js_utils.ngl_demo">[docs]</a><span class="k">def</span> <span class="nf">ngl_demo</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="mi">400</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">400</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;make a viewport, create stage object and populate NGL namespace</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -211,6 +227,7 @@
 
     <span class="n">display</span><span class="p">(</span><span class="n">HTML</span><span class="p">(</span><span class="n">command</span><span class="p">))</span>
     <span class="n">display</span><span class="p">(</span><span class="n">HTML</span><span class="p">(</span><span class="n">command2</span><span class="p">))</span></div>
+
 
 <div class="viewcode-block" id="init_funcs"><a class="viewcode-back" href="../../../_api/nglview.jsutils.html#nglview.utils.js_utils.init_funcs">[docs]</a><span class="k">def</span> <span class="nf">init_funcs</span><span class="p">():</span>
     <span class="sd">&quot;&quot;&quot;print</span>
@@ -255,7 +272,7 @@
         <li class="right" >
           <a href="../../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 0.6.2.3 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../../index.html">NGLView 0.6.2.3+8.gd5331cc documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../../index.html" >Module code</a> &#187;</li> 
       </ul>
     </div>
