--- a/dev/_modules/nglview/show.html
+++ b/dev/_modules/nglview/show.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>nglview.show &#8212; NGLView 0.6.2.3 documentation</title>
+    <title>nglview.show &#8212; NGLView 0.6.2.3+8.gd5331cc documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.6.2.3',
+        VERSION:     '0.6.2.3+8.gd5331cc',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -38,7 +38,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.6.2.3 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.6.2.3+8.gd5331cc documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li> 
       </ul>
     </div>  
@@ -59,17 +59,10 @@
 <span class="kn">from</span> <span class="nn">.widget</span> <span class="k">import</span> <span class="n">NGLWidget</span>
 <span class="kn">from</span> <span class="nn">.</span> <span class="k">import</span> <span class="n">datafiles</span>
 
-<span class="kn">from</span> <span class="nn">.adaptor</span> <span class="k">import</span> <span class="p">(</span>
-    <span class="n">FileStructure</span><span class="p">,</span>
-    <span class="n">TextStructure</span><span class="p">,</span>
-    <span class="n">PdbIdStructure</span><span class="p">,</span>
-    <span class="n">ASEStructure</span><span class="p">,</span>
-    <span class="n">MDTrajTrajectory</span><span class="p">,</span>
-    <span class="n">PyTrajTrajectory</span><span class="p">,</span>
-    <span class="n">ParmEdTrajectory</span><span class="p">,</span>
-    <span class="n">MDAnalysisTrajectory</span><span class="p">,</span>
-    <span class="n">HTMDTrajectory</span><span class="p">,</span>
-    <span class="n">ASETrajectory</span><span class="p">)</span>
+<span class="kn">from</span> <span class="nn">.adaptor</span> <span class="k">import</span> <span class="p">(</span><span class="n">FileStructure</span><span class="p">,</span> <span class="n">TextStructure</span><span class="p">,</span> <span class="n">PdbIdStructure</span><span class="p">,</span>
+                      <span class="n">ASEStructure</span><span class="p">,</span> <span class="n">MDTrajTrajectory</span><span class="p">,</span> <span class="n">PyTrajTrajectory</span><span class="p">,</span>
+                      <span class="n">ParmEdTrajectory</span><span class="p">,</span> <span class="n">MDAnalysisTrajectory</span><span class="p">,</span> <span class="n">HTMDTrajectory</span><span class="p">,</span>
+                      <span class="n">ASETrajectory</span><span class="p">)</span>
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s1">&#39;demo&#39;</span><span class="p">,</span>
@@ -85,7 +78,9 @@
     <span class="s1">&#39;show_parmed&#39;</span><span class="p">,</span>
     <span class="s1">&#39;show_rdkit&#39;</span><span class="p">,</span>
     <span class="s1">&#39;show_structure_file&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;show_htmd&#39;</span><span class="p">,]</span>
+    <span class="s1">&#39;show_htmd&#39;</span><span class="p">,</span>
+<span class="p">]</span>
+
 
 <div class="viewcode-block" id="show_pdbid"><a class="viewcode-back" href="../../api.html#nglview.show_pdbid">[docs]</a><span class="k">def</span> <span class="nf">show_pdbid</span><span class="p">(</span><span class="n">pdbid</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&#39;&#39;&#39;Show PDB entry.</span>
@@ -99,17 +94,20 @@
     <span class="n">structure</span> <span class="o">=</span> <span class="n">PdbIdStructure</span><span class="p">(</span><span class="n">pdbid</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">structure</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
 
+
 <div class="viewcode-block" id="show_url"><a class="viewcode-back" href="../../api.html#nglview.show_url">[docs]</a><span class="k">def</span> <span class="nf">show_url</span><span class="p">(</span><span class="n">url</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="n">kwargs2</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">((</span><span class="n">k</span><span class="p">,</span> <span class="n">v</span><span class="p">)</span> <span class="k">for</span> <span class="n">k</span><span class="p">,</span> <span class="n">v</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">items</span><span class="p">())</span>
     <span class="n">view</span> <span class="o">=</span> <span class="n">NGLWidget</span><span class="p">()</span>
     <span class="n">view</span><span class="o">.</span><span class="n">add_component</span><span class="p">(</span><span class="n">url</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs2</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">view</span></div>
 
+
 <div class="viewcode-block" id="show_text"><a class="viewcode-back" href="../../api.html#nglview.show_text">[docs]</a><span class="k">def</span> <span class="nf">show_text</span><span class="p">(</span><span class="n">text</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;for development</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">structure</span> <span class="o">=</span> <span class="n">TextStructure</span><span class="p">(</span><span class="n">text</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">structure</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
+
 
 <div class="viewcode-block" id="show_ase"><a class="viewcode-back" href="../../api.html#nglview.show_ase">[docs]</a><span class="k">def</span> <span class="nf">show_ase</span><span class="p">(</span><span class="n">ase_atoms</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
@@ -127,6 +125,7 @@
     <span class="n">structure</span> <span class="o">=</span> <span class="n">ASEStructure</span><span class="p">(</span><span class="n">ase_atoms</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">structure</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
 
+
 <div class="viewcode-block" id="show_asetraj"><a class="viewcode-back" href="../../api.html#nglview.show_asetraj">[docs]</a><span class="k">def</span> <span class="nf">show_asetraj</span><span class="p">(</span><span class="n">ase_traj</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&#39;&#39;&#39;Show ase trajectory and structure file.</span>
 
@@ -141,6 +140,7 @@
 <span class="sd">    &#39;&#39;&#39;</span>
     <span class="n">trajectory</span> <span class="o">=</span> <span class="n">ASETrajectory</span><span class="p">(</span><span class="n">ase_traj</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">trajectory</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
+
 
 <div class="viewcode-block" id="show_structure_file"><a class="viewcode-back" href="../../api.html#nglview.show_structure_file">[docs]</a><span class="k">def</span> <span class="nf">show_structure_file</span><span class="p">(</span><span class="n">path</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&#39;&#39;&#39;Show structure file. Allowed are text-based structure</span>
@@ -196,7 +196,10 @@
 <span class="sd">    &gt;&gt;&gt; w = nv.show_pytraj(t)</span>
 <span class="sd">    &gt;&gt;&gt; w # doctest: +SKIP</span>
 <span class="sd">    &#39;&#39;&#39;</span>
-    <span class="n">trajlist</span> <span class="o">=</span> <span class="n">pytraj_trajectory</span> <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">pytraj_trajectory</span><span class="p">,</span> <span class="p">(</span><span class="nb">list</span><span class="p">,</span> <span class="nb">tuple</span><span class="p">))</span> <span class="k">else</span> <span class="p">[</span><span class="n">pytraj_trajectory</span><span class="p">,]</span>
+    <span class="n">trajlist</span> <span class="o">=</span> <span class="n">pytraj_trajectory</span> <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">pytraj_trajectory</span><span class="p">,</span>
+                                               <span class="p">(</span><span class="nb">list</span><span class="p">,</span> <span class="nb">tuple</span><span class="p">))</span> <span class="k">else</span> <span class="p">[</span>
+                                                   <span class="n">pytraj_trajectory</span><span class="p">,</span>
+                                               <span class="p">]</span>
 
     <span class="n">trajlist</span> <span class="o">=</span> <span class="p">[</span><span class="n">PyTrajTrajectory</span><span class="p">(</span><span class="n">traj</span><span class="p">)</span> <span class="k">for</span> <span class="n">traj</span> <span class="ow">in</span> <span class="n">trajlist</span><span class="p">]</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">trajlist</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
@@ -215,6 +218,7 @@
 <span class="sd">    &#39;&#39;&#39;</span>
     <span class="n">structure_trajectory</span> <span class="o">=</span> <span class="n">ParmEdTrajectory</span><span class="p">(</span><span class="n">parmed_structure</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">structure_trajectory</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
+
 
 <div class="viewcode-block" id="show_rdkit"><a class="viewcode-back" href="../../api.html#nglview.show_rdkit">[docs]</a><span class="k">def</span> <span class="nf">show_rdkit</span><span class="p">(</span><span class="n">rdkit_mol</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&#39;&#39;&#39;Show rdkit&#39;s Mol.</span>
@@ -270,6 +274,7 @@
         <span class="c1"># parm_nv.params = dict(firstModelOnly=True)</span>
         <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">parm_nv</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
 
+
 <div class="viewcode-block" id="show_mdanalysis"><a class="viewcode-back" href="../../api.html#nglview.show_mdanalysis">[docs]</a><span class="k">def</span> <span class="nf">show_mdanalysis</span><span class="p">(</span><span class="n">atomgroup</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&#39;&#39;&#39;Show NGL widget with MDAnalysis AtomGroup.</span>
 
@@ -287,6 +292,7 @@
     <span class="n">structure_trajectory</span> <span class="o">=</span> <span class="n">MDAnalysisTrajectory</span><span class="p">(</span><span class="n">atomgroup</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">structure_trajectory</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
 
+
 <div class="viewcode-block" id="show_htmd"><a class="viewcode-back" href="../../api.html#nglview.show_htmd">[docs]</a><span class="k">def</span> <span class="nf">show_htmd</span><span class="p">(</span><span class="n">mol</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&#39;&#39;&#39;Show NGL widget with HTMD Molecule.</span>
 
@@ -303,6 +309,7 @@
 <span class="sd">    &#39;&#39;&#39;</span>
     <span class="n">structure_trajectory</span> <span class="o">=</span> <span class="n">HTMDTrajectory</span><span class="p">(</span><span class="n">mol</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">NGLWidget</span><span class="p">(</span><span class="n">structure_trajectory</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
+
 
 <div class="viewcode-block" id="demo"><a class="viewcode-back" href="../../api.html#nglview.demo">[docs]</a><span class="k">def</span> <span class="nf">demo</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&#39;&#39;&#39;</span>
@@ -345,7 +352,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.6.2.3 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.6.2.3+8.gd5331cc documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li> 
       </ul>
     </div>
