--- a/dev/_api/nglview.player.html
+++ b/dev/_api/nglview.player.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>nglview.player &#8212; NGLView 1.0.a0+11.g1e1015e.dirty documentation</title>
+    <title>nglview.player &#8212; NGLView 1.0.a0+12.g06a6aaa documentation</title>
     
     <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '1.0.a0+11.g1e1015e.dirty',
+        VERSION:     '1.0.a0+12.g06a6aaa',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -40,7 +40,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 1.0.a0+11.g1e1015e.dirty documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 1.0.a0+12.g06a6aaa documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -340,7 +340,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 1.0.a0+11.g1e1015e.dirty documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 1.0.a0+12.g06a6aaa documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
