--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &#8212; NGLView 1.0.a0+11.g1e1015e.dirty documentation</title>
+    <title>Index &#8212; NGLView 1.0.a0+12.g06a6aaa documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.0.a0+11.g1e1015e.dirty',
+        VERSION:     '1.0.a0+12.g06a6aaa',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -41,7 +41,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+11.g1e1015e.dirty documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+12.g06a6aaa documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -874,7 +874,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+11.g1e1015e.dirty documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 1.0.a0+12.g06a6aaa documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
